# mail-cake

./: .env.example  .gitignore  Makefile  OPERATIONS.md  README.md  docker-compose.yml  litellm_config.yaml
.claude/: launch.json  settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_topic_skill_prompt.py
backend/app/: main.py
backend/app/api/v1/: auth.py  emails.py  settings.py  topics.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  digest.py  email.py  summary.py  topic.py  user.py
backend/app/services/: crypto_service.py  gmail_service.py  llm_service.py
backend/app/workers/: digest.py  email_sync.py  main.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/threads/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/email/: EmailCard.tsx  ModelStyleSelector.tsx
frontend/components/layout/: Sidebar.tsx
frontend/components/topic/: TopicEditor.tsx  TopicPanel.tsx
frontend/lib/: api.ts  utils.ts
